Add register page //enter email, phone no, and gender. UserDetail: change view

--- a/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
@@ -119,6 +119,12 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
+        <activity
+            android:name="com.parse.carpool.RegisterActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
         <activity android:name="com.parse.carpool.TripDetail"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
