--- a/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
@@ -114,7 +114,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-            android:name="com.parse.carpool.StartTrip"
+            android:name="com.parse.carpool.CreateTrip"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
