--- a/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
@@ -59,7 +59,7 @@
         <activity
             android:name="com.parse.carpool.SplashScreen"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:screenOrientation="portrait">
                 <intent-filter>
                     <action android:name="android.intent.action.MAIN" />
@@ -121,6 +121,12 @@
         </activity>
         <activity
             android:name="com.parse.carpool.RegisterActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        </activity>
+        <activity
+            android:name="com.parse.carpool.UserDetailActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
