--- a/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
+++ b/CarpoolTH/IntegratingFacebookTutorial/AndroidManifest.xml
@@ -70,7 +70,7 @@
         <activity
             android:name="com.parse.carpool.LoginActivity"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:launchMode="singleTop"
             android:screenOrientation="portrait">
         </activity>
@@ -138,6 +138,12 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.parse.carpool.FindDriver" />
+        </activity>
+        <activity
+            android:name="com.parse.carpool.ChatActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light">
         </activity>
 
         <activity android:name="com.facebook.FacebookActivity"
