--- a/CarpoolTH/IntegratingFacebookTutorial/build.gradle
+++ b/CarpoolTH/IntegratingFacebookTutorial/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.2.0'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
     compile fileTree(dir: 'libs', include: 'ParseFacebookUtilsV4-*.jar')
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile project(':facebook')
 }
 android {
